# gtkchart

./: .clang-format  .editorconfig  LICENSE  README.md  meson.build  meson_options.txt
demo/: demo_box.c  demo_box.h  gtkchart-demo.c  main.c  meson.build
src/: gtkchart.c  gtkchart.h  meson.build
